mathlive popover z-index fix

--- a/src/css/injected.css
+++ b/src/css/injected.css
@@ -385,3 +385,7 @@
 		box-shadow: inset 0 0 0 100vmax var(--uclearn-translucent-bg);
 	}
 }
+
+:root #mathlive-suggestion-popover {
+	z-index: 10000;
+}
